--- a/src/globals.css
+++ b/src/globals.css
@@ -4,7 +4,7 @@ body{
 
 h1 {
   display: flex;
-  color: white;
+  color: black;
   justify-content: center;
   align-items: center;
   margin: 0;
@@ -19,8 +19,8 @@ h1 {
   justify-content: center;
   border: 2px white;
   border-style: solid;
-  background-color: #FEF9D9;
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 .mensajePropio{
